# client_test

./: CMakeLists.txt  CMakeSettings.json
telnet/: CMakeLists.txt  main.cpp  telnet.h
testclient/: CMakeLists.txt  client.h  data.h  main.cpp  message.h  testclient.cpp
